xterm (247-1) UNRELEASED; urgency=low

  * New upstream release.
  * Bump Standards-Version to 3.8.3.
  * Remove David Martínez Moreno from Uploaders as he hasn't been active on
    this package lately.
  * Kill remaining subversion $Id$ tags from debian packaging files.

 -- Julien Cristau <jcristau@debian.org>  Sun, 23 Aug 2009 00:40:57 +0200

xterm (246-1) unstable; urgency=low

  * New upstream release
    + interaction between allowSendEvents and the various allowXXXOps
      resources clarified in manpage (closes: #531597)
    + remove obsolete logic for saving/restoring wrapping flags, which did not
      work on 64-bit platform.  Wrapping flags (stored in the line-index) are
      now copied with line-data (closes: #541160)
    + modify comments in app-defaults files to avoid problem with C
      preprocessor used by xrdb (closes: #541603)
    + restore special case in makeColorPair needed for colorBDMode resource
      (closes: #541089)
    + correct SetLineFlags() macro, broken in patch #244 when recoding to
      avoid gcc-specific bitfields (closes: #541236)
  * The issues with the fifo-lines code should now be fixed, so enable it
    again.

 -- Julien Cristau <jcristau@debian.org>  Sun, 23 Aug 2009 00:35:21 +0200

xterm (244-2) unstable; urgency=low

  * Configure with --disable-fifo-lines to work around a crash in the new
    saved-lines handling code (closes: #541236, #541160, #541132, #541109).
    Thanks to Thomas Dickey for the workaround.

 -- Julien Cristau <jcristau@debian.org>  Wed, 12 Aug 2009 22:25:16 +0200

xterm (244-1) unstable; urgency=low

  * New upstream release
    + remove a limit-check in ptydata.c, allowing Unicode values past 64k to
      be displayed using TrueType fonts (closes: #458432)
    + demote recent (xterm 242) change to Debian #252873 fix to experimental,
      ifdef'd out as EXP_BOGUS_FG (closes: #522141)
    + work around groff mapping of ASCII quotes using macros (requested by