@@ -11,6 +11,7 @@ Build-Depends:
  libncurses5-dev | libncurses-dev,
  libxft-dev (>> 2.1.2), libxrender-dev (>> 1:0.9.0),
  libxaw7-dev,
+ libutempter-dev,
  debhelper (>= 5),
  quilt,
  lynx
