@@ -1,1 +1,0 @@
-xterm: setgid-binary usr/bin/xterm 2755 root/utmp
